--- a/.github/workflows/image-push.yml
+++ b/.github/workflows/image-push.yml
@@ -32,7 +32,7 @@ jobs:
       run: |
         skipper make create-python-client
     - name: Publish bm-inventory to Registry
-      uses: elgohr/Publish-Docker-Github-Action@2.15
+      uses: elgohr/Publish-Docker-Github-Action@v5
       with:
         name: bm-inventory
         username: ${{ secrets.DOCKER_USERNAME }}
