--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
       id: get_tag
       run: echo ::set-env name=GIT_TAG::${GITHUB_REF/refs\/tags\//}
     - name: Publish bm-inventory to Registry
-      uses: elgohr/Publish-Docker-Github-Action@2.15
+      uses: elgohr/Publish-Docker-Github-Action@v5
       with:
         name: bm-inventory
         username: ${{ secrets.DOCKER_USERNAME }}
